--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,6 @@ rapidocr-onnxruntime==1.3.15
 pymupdf==1.24.0
 unstructured==0.12.6
 chromadb==0.4.14
-markdown==3.6
 spark-ai-python==0.3.15
+langchain_huggingface
+sentence-transformers==2.2.2
